<resources>
    <string name="app_name">SMS Sync</string>
    <string name="title_sync">Sync</string>
    <string name="title_messages">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="label_last_updated">Last Updated</string>
    <string name="label_sync_now">Sync Now</string>
    <string name="label_find_previous_sync_data">Find Previous Data</string>
    <string name="label_no_previous_syncs_found">No Previous Syncs Found</string>
    <string name="label_no_messages">No Messages</string>
    <string name="label_please_sync_messages">Please sync messages to view them</string>
    <string name="label_syncing_messages">Syncing Messages…</string>
    <string name="mms_image_content_description">MMS Image</string>
    <string name="force_full_sync_label">Force Full Sync</string>
    <string-array name="cloud_backup_provider_values">
        <item>google_drive</item>
        <item>onedrive</item>
        <item>owncloud</item>
    </string-array>
    <string-array name="cloud_backup_provider_entries">
        <item>Google Drive</item>
        <item>OneDrive</item>
        <item>OwnCloud</item>
    </string-array>
    <string name="notification_channel_id">sync_progress</string>
    <string name="notification_channel_name">Sync Progress</string>
    <string name="notification_channel_description">Progress of currently running sync</string>
    <string name="notification_title">Sync Progress</string>
    <string name="cancel_sync">Cancel</string>
</resources>