<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.pitlor.smssync.activities.fragments.SyncFragment"
        android:label="@string/title_sync"
        tools:layout="@layout/fragment_sync" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="dev.pitlor.smssync.activities.fragments.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="dev.pitlor.smssync.activities.fragments.SettingsFragment"
        android:label="@string/title_settings" />
</navigation>