<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="dev.pitlor.smssync.viewmodels.SyncRegularViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/label_last_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/label_last_updated"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toTopOf="@+id/label_last_updated_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_last_updated_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:displayDateTime="@{viewModel.lastSync.startTime}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_last_updated"
            tools:text="1/1/1970 12:00 AM" />

        <Button
            android:id="@+id/action_sync_now"
            style="@style/CTAButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="@{viewModel::sync}"
            android:text="@string/label_sync_now"
            app:layout_constraintEnd_toStartOf="@+id/force_full_sync_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_last_updated_time" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/label_sync_step"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_sync_now"
            app:visibleIfNull="@{viewModel.lastSync.endTime}" />

        <TextView
            android:id="@+id/label_sync_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/label_syncing_messages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/progress_bar"
            app:layout_constraintTop_toBottomOf="@+id/action_sync_now"
            app:visibleIfNull="@{viewModel.lastSync.endTime}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_sync_progress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

        <Button
            android:id="@+id/force_full_sync_button"
            android:onClick="@{viewModel::fullSync}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/force_full_sync_label"
            app:layout_constraintBottom_toBottomOf="@+id/action_sync_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/action_sync_now"
            app:layout_constraintTop_toTopOf="@+id/action_sync_now" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>